--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     
       <div class="row text-white">
         <div class="col-md-6 col-9 p-3 pl-2 ">
-          <h2>Kripa Online</h2>
+          <h2 style="margin-left: 0.5em;padding: -2px 0 7em 2em 0">Kripa Online</h2>
+
         </div>
         <div class="col-xs-12 col-md-6 col-3 my-auto ">
           
@@ -58,13 +59,13 @@
     </div>
   </section>
 
-<section class="service text-white" id="service-section"  > 
+<section class="service text-white "  id="service-section"  > 
   <div class="col-sm-12 p-2 pl-10">
     <h2><center>Services</center></h2>
   </div>
 </section>
 
-<section class="content conatiner ">
+<section class="content conatiner row ">
   <div class="csc col-xs-12 col-sm-6 col-md-3 ">
     <div></div>
     <p>dfgdfgfd</p>
@@ -437,13 +438,15 @@
 <section class="third text-white" id="contactt-section">
 <h2><center>Contact</center></h2>
 <div class=" col-sm-12 p-2 pl-10">
-  <p>dsfyhsdg</p>
-  <br>
-  <p>dsfyhsdg</p>
-  <br>
-  <p>dsfyhsdg</p>
-  <br>
-  <p>dsfyhsdg</p>
+  <center><p>dsfyhsdg</p>
+    <br>
+    <p>dsfyhsdg</p>
+    <br>
+    <p>dsfyhsdg</p>
+    <br>
+    <p>dsfyhsdg</p>
+    </center>
+  
   
 </div>
 
@@ -453,12 +456,12 @@
 <h2><center>About</center></h2>
 <div class=" col-sm-12 p-2 pl-10">
   <p>dsfyhsdg</p>
-  <br>
-  <p>dsfyhsdg</p>
   
   
 </div>
-
+<div>
+  <i><center>created by cstechnics</center></i>
+</div>
 </section>
 
 
