--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       border-color: rgb(255, 255, 255);margin-left: 20px;margin-top: 20px;margin-top: 20px;">
       <h4 style="font-weight: 900 ;font-size: 50px;color:rgb(0, 0, 0)"><center>BANK</center></h4>
         
-        <p style="color: white;margin-top: 60px;">Miro ATM</p>
+        <p style="color: white;margin-top: 60px;">Micro ATM</p>
         <p style="color: white;">Cash Deposit</p>
         <p style="color: white;">Fund Transfer</p>
         <p style="color: white;">Balance Enquiry</p>
