--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       border-color: rgb(255, 255, 255);margin-left: 20px;margin-top: 20px;">
         <h4 style="font-weight: 900 ;font-size: 50px;color:rgb(0, 0, 0)"><center>DTP</center></h4>
       
-       <p style="color: white;margin-top: 65px;">photostat copy (1rs/copy)</p>
+       <p style="color: white;margin-top: 65px;">photostat copy (1Rs/copy)</p>
        <p style="color: white;">Text Formatting</p>
        <p style="color: white;">Layout Design</p>
       <div>
