--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         <h5>Address:</h5>
         <ul class="list-unstyled">
             <li>Kripa Online</li>
-            <li> Near PostOffice ,Venganoor, Thiruvananthapuram, India</li>
+            <li> Opposite Sub Registar office ,Venganoor, Thiruvananthapuram, India</li>
             <li> 695523 </li>
         </ul>
         
